--- a/tasks.json
+++ b/tasks.json
@@ -5,5 +5,26 @@
     "description": "Milk, eggs, and bread",
     "due_date": null,
     "completed": true
+  },
+  {
+    "id": 2,
+    "title": "Get Milk",
+    "description": "Go to Store to get milk",
+    "due_date": "2025-6-22",
+    "completed": false
+  },
+  {
+    "id": 3,
+    "title": "Go for walk",
+    "description": "Walk",
+    "due_date": "2025-06-23",
+    "completed": false
+  },
+  {
+    "id": 4,
+    "title": "Walk the Dog",
+    "description": "Use the Secret Path",
+    "due_date": "2025-06-22",
+    "completed": false
   }
 ]
